--- a/package.json
+++ b/package.json
@@ -2,12 +2,29 @@
   "name": "gamerlicense",
   "version": "1.0.0",
   "description": "Generate gamer licenses",
-  "main": "index.js",
+  "main": "build/index.js",
   "dependencies": {
-    "discord.js": "^12.4.1",
-    "jimp": "^0.16.1"
+    "canvas": "^2.8.0",
+    "chainfetch": "^1.2.2",
+    "discord.js": "^13.0.0-dev.fe5d56c.1625443439",
+    "node-fetch": "^2.6.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@tsconfig/node14": "^1.0.0",
+    "@types/node": "^14.14.37",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.24.0",
+    "typescript": "^4.2.3"
+  },
+  "nodemon": {
+    "ignore": [
+      "Data/*"
+    ],
+    "watch": [
+      "src/*"
+    ]
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
