--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Generate gamer licenses",
   "main": "build/index.js",
   "dependencies": {
-    "canvas": "^2.8.0",
+    "@types/skia-canvas": "^0.9.1",
     "chainfetch": "^1.2.2",
     "discord.js": "^13.0.0-dev.fe5d56c.1625443439",
     "node-fetch": "^2.6.1"
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@tsconfig/node14": "^1.0.0",
     "@types/node": "^14.14.37",
+    "@types/skia-canvas": "^0.9.1",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.24.0",
