--- a/package.json
+++ b/package.json
@@ -4,19 +4,18 @@
   "description": "Generate gamer licenses",
   "main": "build/index.js",
   "dependencies": {
-    "chainfetch": "^1.2.2",
-    "discord.js": "^13.0.0-dev.fe5d56c.1625443439",
-    "node-fetch": "^2.6.1",
-    "skia-canvas": "^0.9.22"
+    "dayjs": "^1.11.5",
+    "discord.js": "^14.3.0",
+    "jsbarcode": "^3.11.5",
+    "skia-canvas": "^1.0.0"
   },
   "devDependencies": {
-    "@tsconfig/node14": "^1.0.0",
-    "@types/node": "^14.14.37",
-    "@types/skia-canvas": "^0.9.1",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "eslint": "^7.24.0",
-    "typescript": "^4.2.3"
+    "@tsconfig/node18": "^1.0.0",
+    "@types/node": "^18.7.13",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
+    "eslint": "^8.23.0",
+    "typescript": "^4.8.2"
   },
   "nodemon": {
     "ignore": [
